--- a/branches.html
+++ b/branches.html
@@ -20,6 +20,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <!-- Global Responsive Fixes -->
+    <link rel="stylesheet" href="responsive-fix.css">
+
     <!-- Google Maps API -->
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap"></script>
@@ -155,13 +158,13 @@
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center church-name">
                         <img src="resources/church logo.jpeg" alt="STM Logo" class="h-12 w-auto">
-                        <div class="ml-3 hidden sm:block">
+                        <div class="ml-3">
                             <span
-                                class="font-display text-lg font-bold text-stm-navy block leading-tight animate-pulse-slow">Seekers
+                                class="font-display text-sm sm:text-lg font-bold text-stm-navy block leading-tight animate-pulse-slow">Seekers
                                 of
                                 the</span>
                             <span
-                                class="font-display text-lg font-bold text-stm-blue block leading-tight animate-gradient">Truth
+                                class="font-display text-sm sm:text-lg font-bold text-stm-blue block leading-tight animate-gradient">Truth
                                 Ministries</span>
                         </div>
                     </a>
