--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
+    <!-- Global Responsive Fixes -->
+    <link rel="stylesheet" href="responsive-fix.css">
+
     <script>
         tailwind.config = {
             theme: {
@@ -200,13 +203,13 @@
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center church-name">
                         <img src="resources/church logo.jpeg" alt="STM Logo" class="h-12 w-auto">
-                        <div class="ml-3 hidden sm:block">
+                        <div class="ml-3">
                             <span
-                                class="font-display text-lg font-bold text-stm-navy block leading-tight animate-pulse-slow">Seekers
+                                class="font-display text-sm sm:text-lg font-bold text-stm-navy block leading-tight animate-pulse-slow">Seekers
                                 of
                                 the</span>
                             <span
-                                class="font-display text-lg font-bold text-stm-blue block leading-tight animate-gradient">Truth
+                                class="font-display text-sm sm:text-lg font-bold text-stm-blue block leading-tight animate-gradient">Truth
                                 Ministries</span>
                         </div>
                     </a>
